talos/kubernetes/apps/gitea/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea
  namespace: gitea
  annotations:
    tailscale.com/funnel: "false"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Gitea"
    gethomepage.dev/description: "Git repositories"
    gethomepage.dev/group: "Infrastructure"
    gethomepage.dev/icon: "gitea"
    gethomepage.dev/href: "https://gitea.${TAILNET_DOMAIN}"
    gethomepage.dev/pod-selector: "app=gitea"
spec:
  ingressClassName: tailscale
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitea-tailscale
                port:
                  number: 3000
  tls:
    - hosts:
        - gitea
